fixed search input being too large. Changed hint. responds properly to media queries.

--- a/3344-group-project/src/components/Search/Search.module.css
+++ b/3344-group-project/src/components/Search/Search.module.css
@@ -35,7 +35,7 @@
     border: 2px solid #4d4c4c;
     border-radius: 5px;
     flex-grow: 1;
-    min-width: 200px;
+    min-width: 120px;
 }
 
 .searchContainer button {
